# bloodgas

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  resources.qrc
prototype/: bloodgasanalyzer.pro  build.sh
prototype/src/: bloodgasanalyzer.cpp  bloodgasanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h
prototype/tests/: test_bloodgasanalyzer.cpp  tests.pro
resources/icons/: Info.plist
src/: CMakeLists.txt
src/cpp/: AuthenticationManager.cpp  AuthenticationManager.h  BloodGasAnalyzer.cpp  BloodGasAnalyzer.h  CalibrationManager.cpp  CalibrationManager.h  DatabaseManager.cpp  DatabaseManager.h  HL7Manager.cpp  HL7Manager.h  HistoricalDataModel.cpp  HistoricalDataModel.h  main.cpp
src/qml/: CalibrationView.qml  HistoryView.qml  LoginView.qml  MainView.qml  SampleInputView.qml  main.qml  qmldir
src/qml/components/: InputField.qml  TouchButton.qml  qmldir
